--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.searchContainer {
+    max-width: 500px;
+}
+
+.weatherContainer {
+    height: 80vh;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 515px) {
+    .searchContainer {
+        max-width: 340px;
+    }
+
+    .weatherContainer {
+        height: 75vh;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .searchContainer {
+        max-width: 250px;
+    }
+
+    .weatherContainer {
+        height: 84vh;
+    }
+}
